--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,8 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel=“stylesheet” href=“https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap” />
-    <link rel=“stylesheet” href=“https://fonts.googleapis.com/icon?family=Material+Icons” />
+    <link rel=“stylesheet” href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap'/>
+    <link rel=“stylesheet” href='https://fonts.googleapis.com/icon?family=Material+Icons' />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
